@@ -128,6 +128,11 @@ div.object .truncated {
   -moz-border-radius: 1px;
 }
 
+span.dict {
+  display: inline-block;
+  vertical-align: text-top;
+}
+
 a.objlink:hover,
 a.objlink:active {
   background: #aaf;
